fix: エラーハンドリングの変更をテストクラスに適用