@@ -1,5 +1,6 @@
 package com.github.oosm032519.playlistviewernext.service.recommendation;
 
+import com.github.oosm032519.playlistviewernext.exception.InternalServerException;
 import com.github.oosm032519.playlistviewernext.service.analytics.AudioFeatureSetter;
 import org.apache.hc.core5.http.ParseException;
 import org.junit.jupiter.api.Test;
@@ -7,24 +8,24 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.mockito.junit.jupiter.MockitoSettings;
-import org.mockito.quality.Strictness;
+import org.springframework.http.HttpStatus;
 import se.michaelthelin.spotify.SpotifyApi;
 import se.michaelthelin.spotify.exceptions.SpotifyWebApiException;
-import se.michaelthelin.spotify.model_objects.specification.ArtistSimplified;
 import se.michaelthelin.spotify.model_objects.specification.Recommendations;
 import se.michaelthelin.spotify.model_objects.specification.Track;
 import se.michaelthelin.spotify.requests.data.browse.GetRecommendationsRequest;
 
 import java.io.IOException;
-import java.util.*;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
-@MockitoSettings(strictness = Strictness.LENIENT)
 class SpotifyRecommendationServiceTest {
 
     @Mock
@@ -37,176 +38,127 @@ class SpotifyRecommendationServiceTest {
     private SpotifyRecommendationService spotifyRecommendationService;
 
     @Test
-    void getRecommendations_ShouldReturnRecommendedTracks() throws IOException, SpotifyWebApiException, ParseException {
-        // Arrange
-        List<String> seedGenres = Arrays.asList("rock", "pop");
+    void getRecommendations_正常系_推奨トラックが取得できる場合() throws SpotifyWebApiException, IOException, ParseException {
+        // テストデータの準備
+        List<String> seedArtists = List.of("artistId1", "artistId2");
         Map<String, Float> maxAudioFeatures = new HashMap<>();
         Map<String, Float> minAudioFeatures = new HashMap<>();
-        Map<String, Float> medianAudioFeatures = new HashMap<>();
-        Map<String, Object> modeValues = new HashMap<>();
+        Track[] tracks = new Track[2];
+        Recommendations recommendations = new Recommendations.Builder().setTracks(tracks).build();
 
-        Track[] mockTracks = createMockTracks();
-        Recommendations mockRecommendations = mock(Recommendations.class);
-        when(mockRecommendations.getTracks()).thenReturn(mockTracks);
+        // モックの設定
+        GetRecommendationsRequest.Builder builderMock = mock(GetRecommendationsRequest.Builder.class);
+        GetRecommendationsRequest requestMock = mock(GetRecommendationsRequest.class);
 
-        GetRecommendationsRequest.Builder recommendationsBuilder = mock(GetRecommendationsRequest.Builder.class);
-        GetRecommendationsRequest recommendationsRequest = mock(GetRecommendationsRequest.class);
+        when(spotifyApi.getRecommendations()).thenReturn(builderMock);
+        when(builderMock.seed_artists(anyString())).thenReturn(builderMock);
+        when(builderMock.limit(anyInt())).thenReturn(builderMock);
+        when(builderMock.build()).thenReturn(requestMock);
+        when(requestMock.execute()).thenReturn(recommendations);
+        doNothing().when(audioFeatureSetter).setMaxAudioFeatures(any(), any());
+        doNothing().when(audioFeatureSetter).setMinAudioFeatures(any(), any());
 
-        when(spotifyApi.getRecommendations()).thenReturn(recommendationsBuilder);
-        when(recommendationsBuilder.seed_genres(anyString())).thenReturn(recommendationsBuilder);
-        when(recommendationsBuilder.limit(anyInt())).thenReturn(recommendationsBuilder);
-        when(recommendationsBuilder.build()).thenReturn(recommendationsRequest);
-        when(recommendationsRequest.execute()).thenReturn(mockRecommendations);
 
-        // Act
-        List<Track> result = spotifyRecommendationService.getRecommendations(seedGenres, maxAudioFeatures, minAudioFeatures, medianAudioFeatures, modeValues);
+        // テスト実行
+        List<Track> result = spotifyRecommendationService.getRecommendations(seedArtists, maxAudioFeatures, minAudioFeatures);
 
-        // Assert
+        // 結果検証
         assertThat(result).hasSize(2);
-        assertThat(result.get(0).getName()).isEqualTo("Track 1");
-        assertThat(result.get(1).getName()).isEqualTo("Track 2");
-        verify(recommendationsBuilder).seed_genres("rock,pop");
-        verify(recommendationsBuilder).limit(20);
-        verify(audioFeatureSetter).setMaxAudioFeatures(recommendationsBuilder, maxAudioFeatures);
-        verify(audioFeatureSetter).setMinAudioFeatures(recommendationsBuilder, minAudioFeatures);
-        verify(audioFeatureSetter).setMedianAudioFeatures(recommendationsBuilder, medianAudioFeatures);
-        verify(audioFeatureSetter).setModeValues(recommendationsBuilder, modeValues);
     }
 
     @Test
-    void getRecommendations_ShouldHandleEmptySeedGenres() throws IOException, SpotifyWebApiException, ParseException {
-        // Arrange
-        List<String> seedGenres = Collections.emptyList();
+    void getRecommendations_正常系_推奨トラックがない場合() throws SpotifyWebApiException, IOException, ParseException {
+        // テストデータの準備
+        List<String> seedArtists = List.of("artistId1", "artistId2");
         Map<String, Float> maxAudioFeatures = new HashMap<>();
         Map<String, Float> minAudioFeatures = new HashMap<>();
-        Map<String, Float> medianAudioFeatures = new HashMap<>();
-        Map<String, Object> modeValues = new HashMap<>();
 
-        // Act
-        List<Track> result = spotifyRecommendationService.getRecommendations(seedGenres, maxAudioFeatures, minAudioFeatures, medianAudioFeatures, modeValues);
+        // モックの設定
+        GetRecommendationsRequest.Builder builderMock = mock(GetRecommendationsRequest.Builder.class);
+        GetRecommendationsRequest requestMock = mock(GetRecommendationsRequest.class);
 
-        // Assert
+        when(spotifyApi.getRecommendations()).thenReturn(builderMock);
+        when(builderMock.seed_artists(anyString())).thenReturn(builderMock);
+        when(builderMock.limit(anyInt())).thenReturn(builderMock);
+        when(builderMock.build()).thenReturn(requestMock);
+        when(requestMock.execute()).thenReturn(null);
+        doNothing().when(audioFeatureSetter).setMaxAudioFeatures(any(), any());
+        doNothing().when(audioFeatureSetter).setMinAudioFeatures(any(), any());
+
+        // テスト実行
+        List<Track> result = spotifyRecommendationService.getRecommendations(seedArtists, maxAudioFeatures, minAudioFeatures);
+
+        // 結果検証
         assertThat(result).isEmpty();
     }
 
     @Test
-    void getRecommendations_ShouldHandleApiException() throws IOException, SpotifyWebApiException, ParseException {
-        // Arrange
-        List<String> seedGenres = Arrays.asList("rock", "pop");
-        Map<String, Float> maxAudioFeatures = new HashMap<>();
-        Map<String, Float> minAudioFeatures = new HashMap<>();
-        Map<String, Float> medianAudioFeatures = new HashMap<>();
-        Map<String, Object> modeValues = new HashMap<>();
+    void getRecommendations_異常系_seedArtistsがnullの場合() throws SpotifyWebApiException {
+        // テスト実行
+        List<Track> result = spotifyRecommendationService.getRecommendations(null, new HashMap<>(), new HashMap<>());
 
-        GetRecommendationsRequest.Builder recommendationsBuilder = mock(GetRecommendationsRequest.Builder.class);
-        GetRecommendationsRequest recommendationsRequest = mock(GetRecommendationsRequest.class);
-
-        when(spotifyApi.getRecommendations()).thenReturn(recommendationsBuilder);
-        when(recommendationsBuilder.seed_genres(anyString())).thenReturn(recommendationsBuilder);
-        when(recommendationsBuilder.limit(anyInt())).thenReturn(recommendationsBuilder);
-        when(recommendationsBuilder.build()).thenReturn(recommendationsRequest);
-        when(recommendationsRequest.execute()).thenThrow(new SpotifyWebApiException("API error"));
-
-        // Act & Assert
-        assertThatThrownBy(() -> spotifyRecommendationService.getRecommendations(seedGenres, maxAudioFeatures, minAudioFeatures, medianAudioFeatures, modeValues))
-                .isInstanceOf(SpotifyApiException.class)
-                .hasMessageContaining("推奨トラックの取得中にエラーが発生しました。");
-    }
-
-    @Test
-    void getRecommendations_ShouldHandleNullRecommendations() throws IOException, SpotifyWebApiException, ParseException {
-        // Arrange
-        List<String> seedGenres = Arrays.asList("rock", "pop");
-        Map<String, Float> maxAudioFeatures = new HashMap<>();
-        Map<String, Float> minAudioFeatures = new HashMap<>();
-        Map<String, Float> medianAudioFeatures = new HashMap<>();
-        Map<String, Object> modeValues = new HashMap<>();
-
-        GetRecommendationsRequest.Builder recommendationsBuilder = mock(GetRecommendationsRequest.Builder.class);
-        GetRecommendationsRequest recommendationsRequest = mock(GetRecommendationsRequest.class);
-
-        when(spotifyApi.getRecommendations()).thenReturn(recommendationsBuilder);
-        when(recommendationsBuilder.seed_genres(anyString())).thenReturn(recommendationsBuilder);
-        when(recommendationsBuilder.limit(anyInt())).thenReturn(recommendationsBuilder);
-        when(recommendationsBuilder.build()).thenReturn(recommendationsRequest);
-        when(recommendationsRequest.execute()).thenReturn(null);
-
-        // Act
-        List<Track> result = spotifyRecommendationService.getRecommendations(seedGenres, maxAudioFeatures, minAudioFeatures, medianAudioFeatures, modeValues);
-
-        // Assert
+        // 結果検証
         assertThat(result).isEmpty();
     }
 
     @Test
-    void getRecommendations_ShouldHandleNullTracks() throws IOException, SpotifyWebApiException, ParseException {
-        // Arrange
-        List<String> seedGenres = Arrays.asList("rock", "pop");
-        Map<String, Float> maxAudioFeatures = new HashMap<>();
-        Map<String, Float> minAudioFeatures = new HashMap<>();
-        Map<String, Float> medianAudioFeatures = new HashMap<>();
-        Map<String, Object> modeValues = new HashMap<>();
+    void getRecommendations_異常系_seedArtistsが空の場合() throws SpotifyWebApiException {
+        // テスト実行
+        List<Track> result = spotifyRecommendationService.getRecommendations(Collections.emptyList(), new HashMap<>(), new HashMap<>());
 
-        Recommendations mockRecommendations = mock(Recommendations.class);
-        when(mockRecommendations.getTracks()).thenReturn(null);
-
-        GetRecommendationsRequest.Builder recommendationsBuilder = mock(GetRecommendationsRequest.Builder.class);
-        GetRecommendationsRequest recommendationsRequest = mock(GetRecommendationsRequest.class);
-
-        when(spotifyApi.getRecommendations()).thenReturn(recommendationsBuilder);
-        when(recommendationsBuilder.seed_genres(anyString())).thenReturn(recommendationsBuilder);
-        when(recommendationsBuilder.limit(anyInt())).thenReturn(recommendationsBuilder);
-        when(recommendationsBuilder.build()).thenReturn(recommendationsRequest);
-        when(recommendationsRequest.execute()).thenReturn(mockRecommendations);
-
-        // Act
-        List<Track> result = spotifyRecommendationService.getRecommendations(seedGenres, maxAudioFeatures, minAudioFeatures, medianAudioFeatures, modeValues);
-
-        // Assert
+        // 結果検証
         assertThat(result).isEmpty();
     }
 
     @Test
-    void getRecommendations_ShouldHandleEmptyTracks() throws IOException, SpotifyWebApiException, ParseException {
-        // Arrange
-        List<String> seedGenres = Arrays.asList("rock", "pop");
+    void getRecommendations_異常系_SpotifyWebApiExceptionが発生した場合() throws IOException, ParseException, SpotifyWebApiException {
+        // テストデータの準備
+        List<String> seedArtists = List.of("artistId1", "artistId2");
         Map<String, Float> maxAudioFeatures = new HashMap<>();
         Map<String, Float> minAudioFeatures = new HashMap<>();
-        Map<String, Float> medianAudioFeatures = new HashMap<>();
-        Map<String, Object> modeValues = new HashMap<>();
 
-        Recommendations mockRecommendations = mock(Recommendations.class);
-        when(mockRecommendations.getTracks()).thenReturn(new Track[0]);
+        // モックの設定
+        GetRecommendationsRequest.Builder builderMock = mock(GetRecommendationsRequest.Builder.class);
+        GetRecommendationsRequest requestMock = mock(GetRecommendationsRequest.class);
 
-        GetRecommendationsRequest.Builder recommendationsBuilder = mock(GetRecommendationsRequest.Builder.class);
-        GetRecommendationsRequest recommendationsRequest = mock(GetRecommendationsRequest.class);
+        when(spotifyApi.getRecommendations()).thenReturn(builderMock);
+        when(builderMock.seed_artists(anyString())).thenReturn(builderMock);
+        when(builderMock.limit(anyInt())).thenReturn(builderMock);
+        when(builderMock.build()).thenReturn(requestMock);
+        when(requestMock.execute()).thenThrow(new SpotifyWebApiException("Spotify API Error"));
+        doNothing().when(audioFeatureSetter).setMaxAudioFeatures(any(), any());
+        doNothing().when(audioFeatureSetter).setMinAudioFeatures(any(), any());
 
-        when(spotifyApi.getRecommendations()).thenReturn(recommendationsBuilder);
-        when(recommendationsBuilder.seed_genres(anyString())).thenReturn(recommendationsBuilder);
-        when(recommendationsBuilder.limit(anyInt())).thenReturn(recommendationsBuilder);
-        when(recommendationsBuilder.build()).thenReturn(recommendationsRequest);
-        when(recommendationsRequest.execute()).thenReturn(mockRecommendations);
 
-        // Act
-        List<Track> result = spotifyRecommendationService.getRecommendations(seedGenres, maxAudioFeatures, minAudioFeatures, medianAudioFeatures, modeValues);
-
-        // Assert
-        assertThat(result).isEmpty();
+        // テスト実行と検証
+        assertThatThrownBy(() -> spotifyRecommendationService.getRecommendations(seedArtists, maxAudioFeatures, minAudioFeatures))
+                .isInstanceOf(SpotifyWebApiException.class)
+                .hasMessageContaining("Spotify API Error");
     }
 
-    private Track[] createMockTracks() {
-        Track track1 = mock(Track.class);
-        Track track2 = mock(Track.class);
-        ArtistSimplified artist1 = mock(ArtistSimplified.class);
-        ArtistSimplified artist2 = mock(ArtistSimplified.class);
+    @Test
+    void getRecommendations_異常系_その他の例外が発生した場合() throws SpotifyWebApiException, ParseException, IOException {
+        // テストデータの準備
+        List<String> seedArtists = List.of("artistId1", "artistId2");
+        Map<String, Float> maxAudioFeatures = new HashMap<>();
+        Map<String, Float> minAudioFeatures = new HashMap<>();
 
-        when(track1.getName()).thenReturn("Track 1");
-        when(track2.getName()).thenReturn("Track 2");
-        when(track1.getArtists()).thenReturn(new ArtistSimplified[]{artist1});
-        when(track2.getArtists()).thenReturn(new ArtistSimplified[]{artist2});
-        when(artist1.getName()).thenReturn("Artist 1");
-        when(artist2.getName()).thenReturn("Artist 2");
+        // モックの設定
+        GetRecommendationsRequest.Builder builderMock = mock(GetRecommendationsRequest.Builder.class);
+        GetRecommendationsRequest requestMock = mock(GetRecommendationsRequest.class);
 
-        return new Track[]{track1, track2};
+        when(spotifyApi.getRecommendations()).thenReturn(builderMock);
+        when(builderMock.seed_artists(anyString())).thenReturn(builderMock);
+        when(builderMock.limit(anyInt())).thenReturn(builderMock);
+        when(builderMock.build()).thenReturn(requestMock);
+        when(requestMock.execute()).thenThrow(new IOException("IO Error"));
+        doNothing().when(audioFeatureSetter).setMaxAudioFeatures(any(), any());
+        doNothing().when(audioFeatureSetter).setMinAudioFeatures(any(), any());
+
+        // テスト実行と検証
+        assertThatThrownBy(() -> spotifyRecommendationService.getRecommendations(seedArtists, maxAudioFeatures, minAudioFeatures))
+                .isInstanceOf(InternalServerException.class)
+                .hasMessageContaining("推奨トラックの取得中にエラーが発生しました。")
+                .hasFieldOrPropertyWithValue("httpStatus", HttpStatus.INTERNAL_SERVER_ERROR); // ここを修正
     }
 }
